OpenDocument: Fix saving <semantics>, it does not infer mrows, so mrow is manually added.

BUG: 134044

svn path=/branches/koffice/1.6/koffice/; revision=584398